@@ -1,78 +1,314 @@
 package project.hotel_booking_system.service.impl;
 
-import lombok.RequiredArgsConstructor;
+import java.math.BigDecimal;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+
+import javax.crypto.Mac;
+import javax.crypto.spec.SecretKeySpec;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
+import lombok.extern.slf4j.Slf4j;
+import project.hotel_booking_system.config.VnPayConfig;
+import project.hotel_booking_system.dto.request.payment_request.PaymentRequestDTO;
 import project.hotel_booking_system.dto.request.payment_request.PaymentStatusUpdateDTO;
+import project.hotel_booking_system.dto.response.PaginationResponse;
 import project.hotel_booking_system.dto.response.PaymentResponseDTO;
+import project.hotel_booking_system.enums.BookingStatus;
 import project.hotel_booking_system.enums.PaymentStatus;
-import project.hotel_booking_system.exception.AppException;
-import project.hotel_booking_system.exception.ErrorCode;
-import project.hotel_booking_system.mapper.PaymentMapper;
+import project.hotel_booking_system.exception.ResourceNotFoundException;
+import project.hotel_booking_system.model.Booking;
 import project.hotel_booking_system.model.Payment;
+import project.hotel_booking_system.repository.BookingRepository;
 import project.hotel_booking_system.repository.PaymentRepository;
 import project.hotel_booking_system.service.PaymentService;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
-@Transactional
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@Slf4j
 public class PaymentServiceImpl implements PaymentService {
 
-    private final PaymentRepository paymentRepository;
-    private final PaymentMapper paymentMapper;
-
+    PaymentRepository paymentRepository;
+    BookingRepository bookingRepository;
+    VnPayConfig vnPayConfig;
+    
     @Override
     public List<PaymentResponseDTO> getAllPayments() {
         List<Payment> payments = paymentRepository.findAll();
         return payments.stream()
-                .map(paymentMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(this::mapToPaymentResponseDTO)
+                .toList();
     }
 
     @Override
     public PaymentResponseDTO getPaymentById(Long id) {
         Payment payment = paymentRepository.findById(id)
-                .orElseThrow(() -> new AppException(ErrorCode.PAYMENT_NOT_FOUND));
-        return paymentMapper.toDTO(payment);
+                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with id: " + id));
+        return mapToPaymentResponseDTO(payment);
     }
 
     @Override
+    @Transactional
     public PaymentResponseDTO updatePaymentStatus(Long id, PaymentStatusUpdateDTO statusUpdateDTO) {
         Payment payment = paymentRepository.findById(id)
-                .orElseThrow(() -> new AppException(ErrorCode.PAYMENT_NOT_FOUND));
-        
-        validateStatusTransition(payment.getStatus(), statusUpdateDTO.getStatus());
+                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with id: " + id));
         
         payment.setStatus(statusUpdateDTO.getStatus());
-        Payment updatedPayment = paymentRepository.save(payment);
         
-        return paymentMapper.toDTO(updatedPayment);
+        // If payment is completed, update booking status based on context
+        if (PaymentStatus.COMPLETED.equals(statusUpdateDTO.getStatus())) {
+            Booking booking = payment.getBooking();
+
+            if (BookingStatus.CHECKED_IN.equals(booking.getStatus())) {
+                booking.setStatus(BookingStatus.COMPLETED);
+                bookingRepository.save(booking);
+            }
+        }
+        
+        return mapToPaymentResponseDTO(paymentRepository.save(payment));
     }
 
     @Override
     public List<PaymentResponseDTO> getPaymentsByStatus(PaymentStatus status) {
         List<Payment> payments = paymentRepository.findByStatus(status);
         return payments.stream()
-                .map(paymentMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(this::mapToPaymentResponseDTO)
+                .toList();
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponseDTO createPayment(PaymentRequestDTO paymentRequestDTO) {
+        Booking booking = bookingRepository.findById(paymentRequestDTO.getBookingId())
+                .orElseThrow(() -> new ResourceNotFoundException("Booking not found with id: " + paymentRequestDTO.getBookingId()));
+
+        BigDecimal amount;
+        if (paymentRequestDTO.isAdvancePayment()) {
+            // 30% advance payment
+            amount = booking.getTotalPrice().multiply(BigDecimal.valueOf(0.3));
+        } else {
+            // Remaining 70% payment
+            amount = booking.getTotalPrice().multiply(BigDecimal.valueOf(0.7));
+        }
+        
+        Payment payment = Payment.builder()
+                .booking(booking)
+                .amount(amount)
+                .paymentMethod(paymentRequestDTO.getPaymentMethod())
+                .status(PaymentStatus.PENDING)
+                .build();
+        
+        return mapToPaymentResponseDTO(paymentRepository.save(payment));
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponseDTO processVnPayPayment(PaymentRequestDTO paymentRequestDTO, String clientIp) {
+        // First create a payment record
+        PaymentResponseDTO paymentResponse = createPayment(paymentRequestDTO);
+        
+        // Generate VNPAY payment URL
+        String vnpayUrl = generateVnPayUrl(paymentResponse.getId(), paymentResponse.getAmount(), clientIp);
+        paymentResponse.setPaymentUrl(vnpayUrl);
+        
+        return paymentResponse;
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponseDTO handleVnPayCallback(String vnPayResponse) {
+        // Parse VNPAY response
+        Map<String, String> vnpParams = parseVnPayResponse(vnPayResponse);
+        
+        // Get payment ID
+        Long paymentId = Long.parseLong(vnpParams.get("vnp_TxnRef"));
+        
+        // Get payment status
+        String vnpResponseCode = vnpParams.get("vnp_ResponseCode");
+        
+        Payment payment = paymentRepository.findById(paymentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with id: " + paymentId));
+        
+        // If payment is successful
+        if ("00".equals(vnpResponseCode)) {
+            payment.setStatus(PaymentStatus.COMPLETED);
+            payment.setPaymentDate(LocalDateTime.now());
+
+            Booking booking = payment.getBooking();
+            
+            // If it's an advance payment (30%), set booking to CONFIRMED
+            if (payment.getAmount().compareTo(booking.getTotalPrice()) < 0 && 
+                    BookingStatus.PENDING.equals(booking.getStatus())) {
+                booking.setStatus(BookingStatus.CONFIRMED);
+            } 
+            // If it's a payment during check-out (remaining 70%), set booking to COMPLETED
+            else if (BookingStatus.CHECKED_IN.equals(booking.getStatus())) {
+                booking.setStatus(BookingStatus.COMPLETED);
+            }
+            
+            bookingRepository.save(booking);
+        } else {
+            payment.setStatus(PaymentStatus.FAILED);
+        }
+        
+        return mapToPaymentResponseDTO(paymentRepository.save(payment));
+    }
+
+    @Override
+    public PaginationResponse<PaymentResponseDTO> getBookingPayments(Long bookingId, Pageable pageable) {
+        Page<Payment> paymentsPage = paymentRepository.findByBookingId(bookingId, pageable);
+        
+        List<PaymentResponseDTO> paymentDTOs = paymentsPage.getContent().stream()
+                .map(this::mapToPaymentResponseDTO)
+                .toList();
+        
+        return PaginationResponse.<PaymentResponseDTO>builder()
+                .content(paymentDTOs)
+                .page(paymentsPage.getNumber())
+                .pageSize(paymentsPage.getSize())
+                .totalElements(paymentsPage.getTotalElements())
+                .totalPages(paymentsPage.getTotalPages())
+                .last(paymentsPage.isLast())
+                .build();
     }
     
-    private void validateStatusTransition(PaymentStatus currentStatus, PaymentStatus newStatus) {
-        //Kiểm tra trạng thái truyển đồi có hợp lệ hay không
-        switch (currentStatus) {
-            case PENDING:
-                if (newStatus != PaymentStatus.PAID && newStatus != PaymentStatus.FAILED) {
-                    throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS_TRANSITION);
-                }
-                break;
-            case PAID:
-            case FAILED:
-                throw new AppException(ErrorCode.PAYMENT_ALREADY_PROCESSED);
-            default:
-                throw new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION);
+    private PaymentResponseDTO mapToPaymentResponseDTO(Payment payment) {
+        Booking booking = payment.getBooking();
+        
+        return PaymentResponseDTO.builder()
+                .id(payment.getId())
+                .bookingId(booking.getId())
+                .roomNumber(booking.getRoom().getRoomNumber())
+                .userName(booking.getUser().getUsername())
+                .amount(payment.getAmount())
+                .paymentDate(payment.getPaymentDate())
+                .paymentMethod(payment.getPaymentMethod())
+                .status(payment.getStatus())
+                .build();
+    }
+    
+    private String generateVnPayUrl(Long paymentId, BigDecimal amount, String clientIp) {
+        if (clientIp == null || clientIp.isEmpty() || "0:0:0:0:0:0:0:1".equals(clientIp)) {
+            clientIp = "127.0.0.1";
         }
+        String vnp_Version = vnPayConfig.getVersion();
+        String vnp_Command = vnPayConfig.getCommand();
+        String vnp_TmnCode = vnPayConfig.getTmnCode();
+        String vnp_CurrCode = vnPayConfig.getCurrCode();
+        String vnp_Locale = vnPayConfig.getLocale();
+        String vnp_OrderType = vnPayConfig.getOrderType();
+
+        String vnp_Amount = String.valueOf(amount.multiply(BigDecimal.valueOf(100)).setScale(0, BigDecimal.ROUND_HALF_UP).longValue());
+        Map<String, String> vnp_Params = new HashMap<>();
+        vnp_Params.put("vnp_Version", vnp_Version);
+        vnp_Params.put("vnp_Command", vnp_Command);
+        vnp_Params.put("vnp_TmnCode", vnp_TmnCode);
+        vnp_Params.put("vnp_Amount", vnp_Amount);
+        vnp_Params.put("vnp_CurrCode", vnp_CurrCode);
+        vnp_Params.put("vnp_OrderType", vnp_OrderType);
+
+        vnp_Params.put("vnp_TxnRef", String.valueOf(paymentId));
+
+        vnp_Params.put("vnp_OrderInfo", "Payment for booking with ID: " + paymentId);
+
+        vnp_Params.put("vnp_Locale", vnp_Locale);
+
+        vnp_Params.put("vnp_ReturnUrl", vnPayConfig.getReturnUrl());
+        
+        // Current time in VN timezone
+        LocalDateTime vnpCreateDate = LocalDateTime.now(ZoneId.of("Asia/Ho_Chi_Minh"));
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+        String vnp_CreateDate = vnpCreateDate.format(formatter);
+        vnp_Params.put("vnp_CreateDate", vnp_CreateDate);
+        vnp_Params.put("vnp_IpAddr", clientIp);
+        
+        // Sort params
+        List<String> fieldNames = new ArrayList<>(vnp_Params.keySet());
+        Collections.sort(fieldNames);
+        
+        StringBuilder hashData = new StringBuilder();
+        StringBuilder query = new StringBuilder();
+
+        Iterator<String> itr = fieldNames.iterator();
+        while (itr.hasNext()) {
+            String fieldName = itr.next();
+            String fieldValue = vnp_Params.get(fieldName);
+            if ((fieldValue != null) && (fieldValue.length() > 0)) {
+                try {
+                    hashData.append(fieldName);
+                    hashData.append('=');
+                    hashData.append(URLEncoder.encode(fieldValue, StandardCharsets.UTF_8));
+
+                    query.append(URLEncoder.encode(fieldName, StandardCharsets.UTF_8));
+                    query.append('=');
+                    query.append(URLEncoder.encode(fieldValue, StandardCharsets.UTF_8));
+                } catch (Exception e) {
+                    log.error("Error encoding VNPay parameters", e);
+                }
+
+                if (itr.hasNext()) {
+                    query.append('&');
+                    hashData.append('&');
+                }
+            }
+        }
+
+        String vnp_SecureHash = hmacSHA512(vnPayConfig.getHashSecret(), hashData.toString());
+        query.append("&vnp_SecureHash=").append(vnp_SecureHash);
+
+        return vnPayConfig.getPaymentUrl() + "?" + query;
+    }
+    
+    private String hmacSHA512(final String key, final String data) {
+        try {
+            if (key == null || data == null) {
+                throw new NullPointerException();
+            }
+            final Mac hmac512 = Mac.getInstance("HmacSHA512");
+            byte[] hmacKeyBytes = key.getBytes(StandardCharsets.UTF_8);
+            final SecretKeySpec secretKey = new SecretKeySpec(hmacKeyBytes, "HmacSHA512");
+            hmac512.init(secretKey);
+            byte[] dataBytes = data.getBytes(StandardCharsets.UTF_8);
+            byte[] result = hmac512.doFinal(dataBytes);
+            StringBuilder sb = new StringBuilder(2 * result.length);
+            for (byte b : result) {
+                sb.append(String.format("%02x", b & 0xff));
+            }
+            return sb.toString();
+        } catch (Exception ex) {
+
+            return "";
+        }
+    }
+    
+    private Map<String, String> parseVnPayResponse(String vnPayResponse) {
+        Map<String, String> vnpParams = new HashMap<>();
+        
+        String[] params = vnPayResponse.split("&");
+        for (String param : params) {
+            String[] keyValue = param.split("=");
+            if (keyValue.length == 2) {
+                vnpParams.put(keyValue[0], keyValue[1]);
+            }
+        }
+        
+        return vnpParams;
     }
 } 
